@@ -4,6 +4,7 @@ Revision history for {{$dist->name}}
   - Added option strict (gh#19)
   - Added exe_dir method (gh#15, gh#18)
   - Added runtime_dir method (gh#15, gh#20)
+  - Added state_home method (gh#15, gh#21)
 
 0.09_01   2021-12-27 12:58:16 -0700
   - Added option path_class (gh#16, gh#17)
